@@ -19,6 +19,8 @@ PHP                                                                        NEWS
 
 - phpdbg:
   . Properly allow for stdin input from a file. (Bob)
+  . Add -s command line option / stdin command for reading script from stdin.
+    (Bob)
 
 - Session:
   . Fixed bug #73273 (session_unset() empties values from all variables in which
